[package]
name = "aip"
description = "Rust SDK for Google's API Improvement Proposals (AIP)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aip-resourcename = { workspace = true, optional = true }
aip-resourceid   = { workspace = true, optional = true }
aip-requestid    = { workspace = true, optional = true }
aip-pagination   = { workspace = true, optional = true }
aip-fieldmask    = { workspace = true, optional = true }
aip-ordering     = { workspace = true, optional = true }
aip-filtering     = { workspace = true, optional = true }
aip-fieldbehavior = { workspace = true, optional = true }
aip-etag          = { workspace = true, optional = true }
aip-softdelete    = { workspace = true, optional = true }
aip-preview       = { workspace = true, optional = true }
aip-validation    = { workspace = true, optional = true }
aip-reflect       = { workspace = true, optional = true }
# Optional IAM primitives (ADR-0010): off by default while the slice matures, like
# `sql` — only `aip = { features = ["iam"] }` pulls it in as `aip::iam`.
aip-iam           = { workspace = true, optional = true }
# Optional SQL adapter (ADR-0005 / ADR-0008): not part of the core, so it stays
# off by default — only `aip = { features = ["sql"] }` pulls it in as `aip::sql`.
aip-sql           = { workspace = true, optional = true }

[features]
default = ["resourcename", "resourceid", "requestid", "pagination", "fieldmask", "ordering", "filtering", "fieldbehavior", "etag", "softdelete", "preview", "validation", "reflect"]

resourcename  = ["dep:aip-resourcename"]
resourceid    = ["dep:aip-resourceid"]
requestid     = ["dep:aip-requestid"]
pagination    = ["dep:aip-pagination"]
fieldmask     = ["dep:aip-fieldmask"]
ordering      = ["dep:aip-ordering"]
filtering     = ["dep:aip-filtering"]
fieldbehavior = ["dep:aip-fieldbehavior"]
# AIP-154 content etags (issue #93): surfaced as `aip::etag`.
etag          = ["dep:aip-etag"]
# AIP-164 soft delete / AIP-165 purge contract (issue #96): surfaced as
# `aip::softdelete`.
softdelete    = ["dep:aip-softdelete"]
# AIP-163 validate_only preview gate (issue #130): surfaced as `aip::preview`.
preview       = ["dep:aip-preview"]
validation    = ["dep:aip-validation"]
# Resource-annotation reflection (issue #61): surfaced as `aip::reflect`.
reflect       = ["dep:aip-reflect"]
# Deliberately not in `default` (ADR-0010): the IAM primitives are opt-in while
# the slice matures.
iam           = ["dep:aip-iam"]
# Deliberately not in `default` (ADR-0005): the SQL adapter is opt-in.
sql           = ["dep:aip-sql"]

# Forward the optional integrations to whichever sub-crates are enabled.
tonic = [
    "aip-resourcename?/tonic",
    "aip-resourceid?/tonic",
    "aip-requestid?/tonic",
    "aip-pagination?/tonic",
    "aip-fieldmask?/tonic",
    "aip-ordering?/tonic",
    "aip-filtering?/tonic",
    "aip-fieldbehavior?/tonic",
    "aip-etag?/tonic",
    "aip-softdelete?/tonic",
    "aip-validation?/tonic",
    "aip-reflect?/tonic",
    "aip-iam?/tonic",
    "aip-sql?/tonic",
]
cel-proto = ["aip-filtering?/cel-proto"]
# Generate the google.iam.v1.Policy / Binding structure (ADR-0010), surfaced as
# `aip::iam::proto`. Opt-in alongside `iam`, mirroring `cel-proto`.
iam-proto = ["aip-iam?/iam-proto"]
# The CEL-backed Condition evaluation adapter (ADR-0010), surfaced as
# `aip::iam::eval`. Opt-in alongside `iam`; pulls the `cel` parser/runtime, so it
# stays out of `default` like `sql`.
eval = ["aip-iam?/eval"]
