# test-fixtures — test-only fixture harness for aip-rs's reflective crates.
#
# Generates the einride example protos (freight + syntax) via buf (ADR-0011):
# `regen.sh` runs `buf build` and commits the import-complete descriptor set to
# `src/descriptor_set.binpb`. No build.rs or proto toolchain is required at
# `cargo build` time — the committed binary is embedded directly.
#
# This crate is never published; it is a `dev-dependency` of the reflective
# crates (`aip-fieldmask`, `aip-pagination`, `aip-ordering`, `aip-filtering`).
[package]
name = "test-fixtures"
description = "Test-only fixtures: einride example protos via buf into a shared DescriptorPool, with JSON -> DynamicMessage helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
prost-reflect = { workspace = true, features = ["serde"] }
serde_json.workspace = true
thiserror.workspace = true
