# freight-server — runnable demo of aip-rs.
#
# A tonic gRPC server implementing einride's example `FreightService`
# (Shipper / Site / Shipment) over an in-memory store. It exists to exercise the
# aip-rs primitives end-to-end and to give us something real to test against; it
# grows as the per-feature crates land (see the per-handler `TODO(aip #N)` seams
# in `src/service.rs`).
#
# The proto types are generated at build time from a `protox`-built descriptor
# set — no `protoc` — matching ADR-0001. The freight protos and their googleapis
# imports are vendored under `proto/`, so the example builds standalone.
[package]
name = "freight-server"
description = "Runnable tonic gRPC demo of aip-rs over einride's example FreightService"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# The SDK under demonstration. Handlers wire in each module as its issue lands.
# The `tonic` feature turns on the crates' AIP-193 `From<Error> for tonic::Status`
# mapping (#16), so a primitive's validation error reaches the client as a rich
# `INVALID_ARGUMENT` (ErrorInfo + BadRequest) via `?`.
aip = { workspace = true, features = ["tonic"] }

# gRPC runtime: tonic core (server + transport), the Prost codec the generated
# service uses, and the protobuf message runtime. `tonic-types` lets the handlers
# attach the same AIP-193 details to their own presence checks (e.g. a required
# field), which no aip-rs primitive covers.
tonic       = { workspace = true, features = ["server", "transport", "router", "codegen"] }
tonic-types = { workspace = true }
tonic-prost = { workspace = true }
prost       = { workspace = true }
prost-types = { workspace = true }
# Reflection (ADR-0001): a DescriptorPool + DynamicMessage transcode bridge so
# the reflective `aip::pagination::request_checksum` and `aip::fieldmask` can
# read a concrete request/message. The `derive` feature supplies the
# `ReflectMessage` derive the generated Typed messages carry (ADR-0009).
prost-reflect = { workspace = true, features = ["derive"] }
tokio       = { workspace = true }

[build-dependencies]
# Pure-Rust .proto compiler (no `protoc`) + tonic codegen fed its descriptor set.
# `prost` re-encodes that set so it can be embedded for the runtime pool.
protox            = { workspace = true }
prost             = { workspace = true }
tonic-prost-build = { workspace = true }
# Decodes the protox-built descriptor set so `build.rs` can enumerate every
# message and attach the `ReflectMessage` derive (ADR-0009 fallback path:
# `prost-reflect-build` only consumes an FDS by re-running `protoc`, which would
# break the no-`protoc` build, so we replicate its ~10 lines of attribute wiring).
prost-reflect     = { workspace = true }
